--- a/app/globals.css
+++ b/app/globals.css
@@ -413,14 +413,15 @@ body {
   position: fixed;
   right: 50px;
   bottom: 50px;
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   background: #94A3B8;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   animation: scaleAnimation 2s infinite alternate;
+  z-index: 222;
 }
 
 @keyframes scaleAnimation {
@@ -634,4 +635,18 @@ body {
   .table table thead th {
     padding-right: 1.25rem;
   }
+}
+
+main {
+  position: relative;
+}
+
+.focus {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
